# tservice-quartet-plugins

./: .gitignore  .gitmodules  README.md  pyproject.toml
graphs/boxplot-r/: config.json  global.R  ui-schema.json.tmpl
graphs/corrplot-r/: config.json  global.R
graphs/density-plot/: config.json  global.R
graphs/group-boxplot/: config.json  global.R
graphs/heatmap-d3/: config.json  global.R
graphs/heatmap-r/: config.json  global.R
graphs/rocket-plot-r/: config.json  global.R
graphs/scatter-plot/: config.json  global.R
graphs/stack-barplot-r/: config.json  global.R
graphs/upset-r/: config.json  global.R
graphs/violin-plot-r/: config.json  global.R
plugins/: ballgown2exp.clj  charts.clj  graph.clj  graphs.clj  quartet_dnaseq_report.clj  quartet_rnaseq_report.clj  xps2pdf.clj
plugins/config/: multiqc_report.yaml  quartet_rnaseq_report.yaml
plugins/libs/: commons.clj  exp2qcdt.clj  merge_exp.clj
plugins/reports/: ballgown2exp.clj  quartet_dnaseq_report.clj  quartet_rnaseq_report.clj
plugins/tools/: merge_exp.clj  sigma.clj  xps2pdf.clj
plugins/wrappers/: exp2qcdt.clj  merge_exp.clj  rnaseq2report.clj  sigma.clj  xps.clj
