[tool.poetry]
name = "tservice-plugins"
version = "0.1.0"
description = "A plugin repo for tservice."
authors = ["YJC <yjcyxky@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
multiqc = "^1.9"
rnaseq-report = {git = "https://github.com/clinico-omics/quartet-rnaseq-report"}
quartet-dnaseq-report = {git = "https://github.com/clinico-omics/quartet-dnaseq-report"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
